c-mods/css/style.css
* {
    padding: 0px;
    margin: 0px;
    list-style: none;
}

body {
    background: #fff;
    color: #000;
}

h1 {
    font-family: Bitter;
}

a {
    color: inherit;
}

a:hover {
    /* color: #000; */
    text-decoration: none;
}

.font-white {
    color: #fff;
}

.carousel-inner img {
    border-radius: 25px;
}

.card-body>*, .card-body h4 a {
    color: #000;
}

.navbar, .navbar>* {
    background-color: #000;
    color: #fff;
}

.active, .secondary-color {
    color: rgb(168, 164, 164);
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
}

#search-input {
    position: absolute;
    top: -1px;
    left: 0;
    width: 95%;
    height: 25px;
    line-height: 30px;
    outline: 0;
    border: 0;
    display: none;
    font-size: 1em;
    border-radius: 20px;
    padding: 0 20px;
}

#login-form {
    display: none;
    position: fixed;
    width: 400px;
    height: 350px;
    top: -400px;
    left: 50%;
    margin-top: -100px;
    margin-left: -175px;
    background-color: rgba(0, 0, 0, 0.795);
    z-index: 3;
    border-radius: 25px;
    color: #fff;
}
.close {
    background: transparent;
    height: 60px;
    position: relative;
}
.close:after {
    content: '';
    height: 25px;
    border-left: 2px solid #fff;
    position: absolute;
    transform: rotate(45deg);
    left: 28px;
}

.close:before {
    content: '';
    height: 25px;
    border-left: 2px solid #fff;
    position: absolute;
    transform: rotate(-45deg);
    left: 28px;
}

/*This resizes the image and container of the carousel on the homepage.*/

#homepage-slider, .carousel-inner, .carousel-inner img {
    width: 100%;
    height: 420px;
}

#cookie {
    position: fixed;
    background-color: rgba(73, 73, 73, 0.836);
    bottom: -140px;
    width: 100%;
    height: 140px;
    color: #fff;
}

.list-group-item.active {
    background: rgb(129, 129, 129);
    border: 1px rgb(153, 153, 153) solid;
}

.fa {
    box-sizing: border-box;
    padding-top: 5px;
    width: 25px;
    height: 25px;
    position: absolute;
    top: -1px;
    right: 0;
    border-radius: 50%;
    color: #07051a;
    text-align: center;
    font-size: 1.0em;
    transition: all 1s;
    margin-right: 2.5px;
}

/*This is applied to our body when login form is active ot prevent background clicks.*/
.bodyOverlay {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
    background-color: rgba(0,0,0,0.3); /* black semi-transparent */
}

#search-form {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: all 1s;
    width: 40px;
    height: 30px;
    background: white;
    box-sizing: border-box;
    border-radius: 30px;
    border: 4px solid white;
    padding: 5px;
}

#search-form:hover {
    width: 200px;
    cursor: pointer;
}

#search-form:hover input {
    display: block;
}

#search-form:hover .fa {
    background: #07051a;
    color: white;
}

#contact-form {
    top: 250px;
}

/*
    ##Device = Mobile phones
*/

@media only screen and (max-width: 767px) {
    /*Raise height of cookie banner, this allows the button to be clicked*/
    #cookie {
        bottom: -200px;
        height: 200px;
    }
    /*Decrease height of carasol, prevents it taking up so much realestate.*/
    #homepage-slider, .carousel-inner, .carousel-inner img {
        width: 100%;
        height: 150px;
    }

    /*Decrease width of login form, prevents it going of the edge of the screen.
    *To be honest, this could probably be set above, thus removing it from here.*/
    #login-form{
        width: 97%;
    }
    /*Change the positioning of our close on login form to reflect the width change above.*/
    .close:after, .close:before {
        left: 5px;
    }
}

/* 
  ##Device = Tablets, Ipads (portrait)
*/

@media (min-width: 768px) and (max-width: 1024px) {
    #cookie {
        bottom: -160px;
        height: 160px;
    }
}

/* 
    ##Device = Tablets, Ipads (landscape)
  */

/* @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
    
    //CSS
    
  } */

